--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,10 +9,12 @@ services:
       - "3306:3306"
         
   backend:
+    environment:
+      BACKEND_PORT: ${BACKEND_PORT}
     build:
       dockerfile: docker/backend.Dockerfile
     ports:
-      - "3000:3000"
+      - "${BACKEND_PORT}:${BACKEND_PORT}"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
