un-fucked-up test.js
replaced albums with artists

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .env
+.vs/vibestream/FileContentIndex/65bd8c26-49da-4711-8003-6ecab0a7bfe1.vsidx
+.vs/VSWorkspaceState.json
+.vs/vibestream/v17/DocumentLayout.json
+.vs/vibestream/v17/DocumentLayout.backup.json
+.vs/vibestream/v17/.wsuo
+.vs/vibestream/FileContentIndex
+.vs/slnx.sqlite
+.vs/ProjectSettings.json
