--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,8 @@
 .env
+.vs/ProjectSettings.json
+.vs/slnx.sqlite
+.vs/vibestream/FileContentIndex/
+.vs/VSWorkspaceState.json
+.vs/vibestream/v17/DocumentLayout.json
+.vs/vibestream/v17/DocumentLayout.backup.json
+.vs/vibestream/v17/.wsuo
