--- a/backend/package.json
+++ b/backend/package.json
@@ -4,15 +4,18 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-      "start": "node index.js",
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "node index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "type": "commonjs",
     "author": "",
     "license": "MIT",
     "dependencies": {
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.0",
-      "express": "^4.17.3",
-      "express-cors": "^0.0.3"
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.0",
+        "express": "^4.17.3",
+        "express-cors": "^0.0.3",
+        "mariadb": "^3.4.0",
+        "sequelize": "^6.37.5"
     }
-  }
+}
