--- a/backend/package.json
+++ b/backend/package.json
@@ -17,5 +17,8 @@
         "express-cors": "^0.0.3",
         "mariadb": "^3.4.0",
         "sequelize": "^6.37.5"
+    },
+    "devDependencies": {
+        "eslint": "^9.17.0"
     }
 }
