--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
         "express": "^4.17.3",
         "express-cors": "^0.0.3",
         "mariadb": "^3.4.0",
+        "multer": "^1.4.5-lts.1",
+        "music-metadata": "^10.6.4",
         "sequelize": "^6.37.5"
     },
     "devDependencies": {
