[general][fix] Add new debug compose configuration file
For building docker-compose with debug purposes
use: docker-compose -f debug-docker-compose.yaml up --build

--- a/debug-docker-compose.yaml
+++ b/debug-docker-compose.yaml
@@ -33,7 +33,7 @@ services:
     build:
       dockerfile: docker/backend.Dockerfile
     ports:
-      - "${BACKEND_PORT}:${BACKEND_PORT_DOCKER}"
+      - "3998:${BACKEND_PORT_DOCKER}"
     depends_on:
       db:
         condition: service_healthy
