--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,10 @@
         "mariadb": "^3.4.0",
         "multer": "^1.4.5-lts.1",
         "music-metadata": "^10.6.4",
-        "sequelize": "^6.37.5"
+        "sequelize": "^6.37.5",
+        "jsonwebtoken": "^9.0.2",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1"
     },
     "devDependencies": {
         "eslint": "^9.17.0"
