--- a/backend/package.json
+++ b/backend/package.json
@@ -5,24 +5,30 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "mocha ./tests/*.test.js"
     },
     "type": "commonjs",
     "author": "",
     "license": "MIT",
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "chai": "^5.1.2",
         "cors": "^2.8.5",
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
         "express-cors": "^0.0.3",
+        "jsonwebtoken": "^9.0.2",
         "mariadb": "^3.4.0",
+        "mocha": "^11.0.1",
         "multer": "^1.4.5-lts.1",
         "music-metadata": "^10.6.4",
-        "sequelize": "^6.37.5",
-        "jsonwebtoken": "^9.0.2",
         "passport": "^0.7.0",
-        "passport-jwt": "^4.0.1"
+        "passport-jwt": "^4.0.1",
+        "rewire": "^7.0.0",
+        "sequelize": "^6.37.5",
+        "sinon": "^19.0.2",
+        "sinon-chai": "^4.0.0",
+        "supertest": "^7.0.0"
     },
     "devDependencies": {
         "eslint": "^9.17.0"
