--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,6 +22,10 @@ jobs:
         run: npm install
         working-directory: ./backend
 
+      - name: Prepare .env
+        run: |
+          echo ${{secrets.JWT_SECRET}} >> .env
+
       - name: Run Mocha tests
         run: npm test
         working-directory: ./backend
