--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^7.0.1",
     "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+	  "media-chrome": "^4.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
