[docker][fix] Docker use wrong env variable
Env variable was not set correctly which
caused issues when trying to buid image

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -28,7 +28,7 @@ services:
 
   backend:
     environment:
-      BACKEND_PORT: ${BACKEND_PORT}
+      BACKEND_PORT: ${BACKEND_PORT_DOCKER}
       DOCKER_RUNNING: 1
     build:
       dockerfile: docker/backend.Dockerfile
