--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@yaireo/tagify": "^4.33.1",
     "choices.js": "^11.0.3",
+    "media-chrome": "^4.3.0",
     "motion": "^11.14.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -19,8 +20,7 @@
     "react-router-dom": "^7.0.1",
     "react-select": "^5.9.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1",
-	  "media-chrome": "^4.3.0"
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
