--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,9 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
+    volumes:
+      - ./docker/my.cnf:/etc/mysql/conf.d/my.cnf
+      
         
   frontend:    
     environment:
